<?xml version="1.0"?>
<package>
  <name>meanwell_inverter</name>
  <version>0.0.0</version>
  <description>The meanwell_inverter package</description>

  <maintainer email="mbosch@robotnik.es">Marc Bosch-Jorge</maintainer>
  <author email="mbosch@robotnik.es">Marc Bosch-Jorge</author>

  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/meanwell_inverter</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robotnik_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>
  
  <run_depend>robotnik_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_srvs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
